# elyria-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_RULES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08aed751a5ba_users_table_refactor.py  56e3842b61c2_added_column_display_name_to_users.py
app/: config.py  main.py
app/api/: root.py
app/api/v1/: __init__.py  auth.py  couples.py  dashboard.py  notes.py  users.py
app/api/v1/media/: __init__.py  albums.py  files.py
app/core/: consts.py  cookies.py  docs.py  enums.py  rate_limiter.py  security.py  validation.py
app/core/dependencies/: auth.py  context.py  services.py
app/handlers/client/: bad_request.py  conflict.py  gone.py  not_found.py  too_many_requests.py  unauthorized.py  unprocessable_content.py
app/handlers/server/: internal_server_error.py  service_unavailable.py
app/handlers/success/: accepted.py
app/infra/: redis.py  s3.py
app/infra/postgres/: __init__.py  uow.py
app/infra/postgres/tables/: users.py
app/repositories/: couple_request.py  interface.py  note.py  user.py
app/repositories/media/: album.py  file.py
app/schemas/dto/: album.py  base.py  couple.py  deletion.py  file.py  user.py  user_session.py
app/schemas/v1/requests/: albums.py  auth.py  files.py  notes.py  users.py
app/schemas/v1/responses/: albums.py  auth.py  couple.py  dashboard.py  files.py  partner.py  standard.py
app/services/: auth.py  couple.py  note.py  user.py
app/services/media/: album.py  file.py
docs/architecture/: ARCHITECTURE.md
docs/architecture/adrs/: ADR-0001-dependency-injection.md  ADR-0002-transaction-management.md  ADR-0003-authentication-session-model.md  ADR-0004-inactive-user-mutations.md  ADR-0005-invalid-session-mutations.md  ADR-0006-base-entity-class.md  ADR-0007-concurrency-and-t-o-c-t-o-u.md
scripts/: clear_pycache.ps1  clear_pycache.sh  compile_pip.ps1  compile_pip.sh  gen_keys.sh
src/application/dto/security/: __init__.py  token_claims.py
src/application/ports/security/: __init__.py  password_hasher.py  token_issuer.py  token_service.py  token_verifier.py
src/composition/: app_info.py  http_app.py  paths.py  settings.py  signature_keys.py
src/domain/: domain_context.py
src/domain/constants/: __init__.py  display_name.py  username.py
src/domain/entities/: __init__.py  base.py  session.py  user.py
src/domain/exceptions/: _base.py  auth.py  base.py  user.py
src/domain/iam/: exceptions.py
src/domain/iam/entities/: __init__.py  identity.py  session.py
src/domain/iam/value_objects/: __init__.py  username.py
src/domain/shared/: context.py  exceptions.py
src/domain/shared/entities/: __init__.py  auditable.py
src/domain/users/: exceptions.py
src/domain/users/entities/: profile.py  user.py
src/domain/users/value_objects/: __init__.py  display_name.py  e2ee_credentials.py  username.py
src/domain/value_objects/: __init__.py  display_name.py  e2ee_credentials.py  username.py
src/identity/application/: exceptions.py
src/identity/application/commands/: __init__.py  login.py  refresh.py  refresh_session.py  register.py  register_user.py
src/identity/domain/: exceptions.py
src/identity/infrastructure/: __init__.py  sqlalchemy_identity_uow.py
src/infrastructure/adapters/: password_hasher.py
src/infrastructure/security/: __init__.py  jwt_token_issuer.py  jwt_token_verifier.py  password_hasher.py
src/presentation/http/: api_code.py  root.py
src/shared/application/: exception.py
src/shared/domain/: exceptions.py
(+83 files in other folders)
