[project]
name = "elyria-backend"
version = "0.5.1"
description = "Романтичное приложение-подарок на 14 февраля от Лёши для Светы."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.13.0",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "basedpyright>=1.39.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "types-aiobotocore>=3.3.0",
    "types-aiobotocore-s3>=3.3.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["./alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W", "B", "SIM", "ARG", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
