[project]
name = "elyria-backend"
version = "0.5.1"
description = "Романтичное приложение-подарок на 14 февраля от Лёши для Светы."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.13.0",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "basedpyright>=1.39.9",
    "import-linter>=2.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "types-aiobotocore>=3.3.0",
    "types-aiobotocore-s3>=3.3.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["./alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W", "B", "SIM", "ARG", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "identity-clean-architecture"
type = "layers"
layers = [
    "src.identity.presentation",
    "src.identity.infrastructure",
    "src.identity.application",
    "src.identity.domain",
]

[[tool.importlinter.contracts]]
name = "shared-clean-architecture"
type = "layers"
layers = [
    "src.shared.presentation",
    "src.shared.infrastructure",
    "src.shared.domain",
]

[[tool.importlinter.contracts]]
name = "domain-does-not-depend-on-infrastructure"
type = "forbidden"
source_modules = ["src.identity.domain", "src.shared.domain"]
forbidden_modules = ["src.shared.infrastructure", "src.shared.presentation"]

[[tool.importlinter.contracts]]
name = "application-does-not-depend-on-infrastructure"
type = "forbidden"
source_modules = ["src.identity.application"]
forbidden_modules = ["src.shared.infrastructure", "src.shared.presentation"]

[[tool.importlinter.contracts]]
name = "shared-does-not-depend-on-bounded-contexts"
type = "forbidden"
source_modules = ["src.shared"]
forbidden_modules = ["src.identity", "src.composition"]

[[tool.importlinter.contracts]]
name = "identity-does-not-depend-on-composition"
type = "forbidden"
source_modules = ["src.identity"]
forbidden_modules = ["src.composition"]
